# NotesOnProgramming2020

./: .gitignore  .gitmodules  CMakeLists.txt  EntropyTree.cpp  EntropyTree.h  class_prediction_distance.cpp  class_prediction_distance.h  final.cpp  main.cpp  plot.R  result.csv  testing.cpp  ùcorrelation_matrix.R
RScripts/: NeuralPlot.R  PlotSVM-RBF.R  analysis.R  plot.R
data/: .Rhistory  mined_patterns.txt  starcraft.csv
exportToHTML/: fptree.hpp.html
include/ai/: BackwardPropagationNetwork.h  Layer.h  Perceptron.h  SinglePerceptron.h  SupportVectorMachines.h
include/ai/datasets/: DLibSplits.h  Starcraft9Dimensions.h  StarcraftAllDimensions.h  StarcraftReplayDataset.h  training_testing_sets.h
include/ai/metrics/: class_prediction_distance.h  entropy_metric.h  gini_metric.h
include/ai/mlp/: BackwardPropagationNetwork.h  Layer.h  Perceptron.h  SinglePerceptron.h  weight.h
include/ai/rtree/: decision_tree.h  split_field.h
include/big_o_notation/: fibonacci_no_master_theorem.h  vptree_node.h
include/dm/: DataMiningMetric.h  GeneralToSpecificHeuristic.h  Rule.h  RulesFromFrequentItemset.h
include/dm/dataset/: ClashRoyaleDatasetMatch.h  ClashRoyalePlayer.h  DeckItem.h
include/numeric/: FibonacciTotalError.h
include/numeric/structures/: AABB.h  IntervalArithmetic.h  OBB.h  Sphere.h  Vector.h
include/utils/: float.h  hashing.h  permutation.h  printers.h  redi.h
include/utils/functional/: FiniteFunction.h  Functionals.h  y_combinator.h
include/utils/numeric/: hashing.h
include/utils/orders/: LexicographicalOrder.h
src/ai/: BackwardPropagationNetwork.cpp  Layer.cpp  SinglePerceptron.cpp  SupportVectorMachines.cpp  learning.cpp  weight.cpp
src/ai/datasets/: Starcraft9Dimensions.cpp  StarcraftAllDimensions.cpp
src/ai/lib/: SupportVectorMachines.cpp
src/ai/lib/datasets/: DLibSplits.cpp  StarcraftAllDimensions.cpp  StarcraftReplayDataset.cpp
src/ai/lib/metrics/: class_prediction_distance.cpp  entropy_metric.cpp  gini_metric.cpp
src/ai/lib/mlp/: BackwardPropagationNetwork.cpp  Layer.cpp  Perceptron.cpp  SinglePerceptron.cpp  weight.cpp
src/ai/lib/rtree/: split_field.cpp
src/ai/metrics/: class_prediction_distance.cpp
src/big_o_notation/: fibonacci_benchmark.cpp  vantage_point_trees.cpp
src/big_o_notation/lib/: fibonacci_no_master_theorem.cpp
src/dm/: data_mining.cpp
src/dm/lib/: DataMiningMetric.cpp  Rule.cpp  RulesFromFrequentItemset.cpp
src/dm/lib/dataset/: ClashRoyaleDatasetMatch.cpp  ClashRoyalePlayer.cpp  DeckItem.cpp
src/numeric/: numeric_error.cpp
src/numeric/lib/: FibonacciTotalError.cpp
src/numeric/structures/: AABB.cpp  IntervalArithmetic.cpp  OBB.cpp  Sphere.cpp  Vector.cpp
src/utils/: FiniteFunction.cpp  float.cpp  hashing.cpp  permutation.cpp
